@@ -29,7 +29,10 @@ pub enum Error {
     /// The checksum of the header mismatched.
     InvalidChecksum,
 
-    /// The signature was invalid.
+    /// The header signature was invalid.
+    InvalidHeaderSignature(MacError),
+
+    /// The signature at EOF was invalid.
     InvalidSignature(MacError),
 }
 
@@ -42,6 +45,7 @@ impl fmt::Display for Error {
             Self::UnknownVersion(version) => write!(f, "unknown version number `{version}`"),
             Self::InvalidParams(err) => write!(f, "{err}"),
             Self::InvalidChecksum => write!(f, "checksum mismatch"),
+            Self::InvalidHeaderSignature(_) => write!(f, "invalid header signature"),
             Self::InvalidSignature(_) => write!(f, "invalid signature"),
         }
     }
@@ -53,7 +57,7 @@ impl std::error::Error for Error {
     #[inline]
     fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
         match self {
-            Self::InvalidSignature(err) => Some(err),
+            Self::InvalidHeaderSignature(err) | Self::InvalidSignature(err) => Some(err),
             _ => None,
         }
     }
@@ -63,13 +67,6 @@ impl From<InvalidParams> for Error {
     #[inline]
     fn from(source: InvalidParams) -> Self {
         Self::InvalidParams(source)
-    }
-}
-
-impl From<MacError> for Error {
-    #[inline]
-    fn from(source: MacError) -> Self {
-        Self::InvalidSignature(source)
     }
 }
 
@@ -97,6 +94,10 @@ mod tests {
         );
         assert_eq!(format!("{}", Error::InvalidChecksum), "checksum mismatch");
         assert_eq!(
+            format!("{}", Error::InvalidHeaderSignature(MacError)),
+            "invalid header signature"
+        );
+        assert_eq!(
             format!("{}", Error::InvalidSignature(MacError)),
             "invalid signature"
         );
@@ -112,6 +113,10 @@ mod tests {
         assert!(Error::UnknownVersion(u8::MAX).source().is_none());
         assert!(Error::InvalidParams(InvalidParams).source().is_none());
         assert!(Error::InvalidChecksum.source().is_none());
+        assert!(Error::InvalidHeaderSignature(MacError)
+            .source()
+            .unwrap()
+            .is::<MacError>());
         assert!(Error::InvalidSignature(MacError)
             .source()
             .unwrap()
@@ -123,14 +128,6 @@ mod tests {
         assert!(matches!(
             Error::from(InvalidParams),
             Error::InvalidParams(InvalidParams)
-        ));
-    }
-
-    #[test]
-    fn mac_error_to_error() {
-        assert!(matches!(
-            Error::from(MacError),
-            Error::InvalidSignature(MacError)
         ));
     }
 }
